--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Character Sheet</title>
+    <title>Well Met!</title>
   </head>
   <body>
     <noscript>
